lucene 10.0.0 draft! (supress-es should be reviewed, scorer returns bad objects, so it should break scorer tests)